<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CRS4 Telemed</string>
    <string name="login">Login</string>
    <string name="lbl_enter_passcode">Enter your passcode…</string>
    <string name="lbl_enter_password">Enter your password…</string>
    <string name="lbl_patients">Patient</string>

    <string name="action_call">Call</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_teleconsultation">TeleconsultationActivity</string>
    <string name="title_activity_base_teleconsultation"></string>
    <string name="hello_world">Hello world!</string>
    <string name="close_session">Close session</string>

    <string name="call_hangup">Hangup</string>

    <string name="call_onHold">On Hold</string>
    <string name="call_onLine">On Line</string>
    <string name="cancel">Cancel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="config_server_address">Config Server Address</string>
    <string name="config_server_port">Config Server Port</string>
    <string name="save">Save</string>
    <string name="select_task_group_dialog">Select the taskgroup</string>
    <string name="start_emergency_call">START EMERGENCY CALL</string>
    <string name="task_group">Task Group</string>
    <string name="text_summary_patient_hint">Insert patient name</string>
    <string name="severity">SEVERITY:</string>
    <string name="room">ROOM</string>
    <string name="start_session">Start Session</string>
    <string name="login_error">Login Error</string>
    <string name="login_error_details">Invalid password/pincode. Please retry.</string>
    <string name="waiting_for_specialist">Waiting for specialist…</string>
    <string name="device_info">Device Info</string>
    <string name="device_id">Device ID</string>
    <string name="error">Error</string>
    <string name="device_not_registered">The device is not registered in the server. Contact the administator</string>
    <string name="generic_taskgroup_error">An error occurred retrieving the taskgroups</string>
    <string name="server_connection_error">Error contacting the server. Check your connection or server parameters</string>
    <string name="user_selection_title">User Selection</string>
    <string name="enter_pass_code_title">Pass Code</string>
    <string name="patient_selection_title">patient selection</string>
    <string name="summary_title">Summary</string>
    <string name="teleconsultation_title">Teleconsultation Selection</string>
    <string name="hangup_call">Hangup</string>
    <string name="ptz">PTZ</string>
    <string name="role">Role</string>
    <string name="ecographist">Ecographist</string>
    <string name="specialist">Specialist</string>
    <string name="wait_for_specialist_message">A consultation request has been sent\nWait for the specialist to respond</string>
    <string name="paused">PAUSED</string>
    <string name="increase_eco_stream">Increase eco</string>
    <string name="decrease_eco_stream">Decrease eco</string>
    <string name="ar_toggle">AR</string>
    <string name="left_eye">left</string>
    <string name="right_eye">right</string>
    <string name="both_eyes">both</string>

    <string-array name="roles_entries">
        <item>@string/ecographist</item>
        <item>@string/specialist</item>
    </string-array>
    <string-array name="roles_entries_values">
        <item>eco_role</item>
        <item>spec_role</item>
    </string-array>
    <string-array name="urgency_values">
        <item>LOW</item>
        <item>NORMAL</item>
        <item>URGENT</item>
    </string-array>

    <string-array name="eyes_entries">
        <item>@string/left_eye</item>
        <item>@string/right_eye</item>
        <item>@string/both_eyes</item>
    </string-array>

    <string-array name="eyes_entries_values">
        <item>LEFT</item>
        <item>RIGHT</item>
        <item>BOTH</item>
    </string-array>

    <string name="most_demo_fragment_instructions">You should set %1$s in Settings</string>
    <string name="set_server">server address, port</string>
    <string name="select_taskgroup">taskgroup</string>
    <string name="select_role">role</string>
    <string name="login_instructions">Login to start a teleconsultation</string>
    <string name="cannot_contact_server">Cannot contact the server. Check your connection</string>
    <string name="loading_users">Loading users. Please wait…</string>
    <string name="title_activity_login_activity_prova">Sign in</string>
    <string name="logout">Logout</string>
    <string name="new_teleconsultation">New\nTeleconsultation</string>
    <string name="search_teleconsultation">Search\nTeleconsultation</string>
    <string name="continue_teleconsultation">Continue\nTeleconsultation</string>
    <string name="teleconsultation_setup">Teleconsultation Setup</string>
    <string name="confirm">Confirm</string>
    <string name="urgency_and_room_selection_title">Urgency and Room selection</string>
    <string name="back">Back</string>
    <string name="next">Continue</string>
    <string name="urgency">Urgency</string>
    <string name="empty_teleconsultation_list">There\'s no teleconsultation requests</string>
    <string name="token_expired_title">Session expired</string>
    <string name="token_expired_message">Please reinsert your password or login with another user</string>
    <string name="load_taskgroups_title">Connection to the remote server</string>
    <string name="load_taskgroups_message">Loading taskgroups associated to this device. Please wait…</string>
    <string name="check_login_title">Checking login</string>
    <string name="check_login_message">Checking if your session is still valid</string>
    <string name="search_patient">Search Patient</string>
    <string name="search">Search</string>
    <string name="use_anonymous">Use anonymous</string>
    <string name="unknown">Unknown</string>
    <string name="patient">Patient</string>
    <string name="description">Description</string>
    <string name="applicant">Applicant</string>
    <string name="patient_id">Patient ID</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_surname">Patient Surname</string>
    <string name="anonymous">Anonymous</string>
    <string name="reset">Reset</string>
    <string name="json">JSON</string>
    <string name="teleconsultation_report">Teleconsultation Report</string>
    <string name="select_the_taskgroup">Select the TaskGroup</string>
    <string name="spinner_item_hint_default">Select an item</string>
    <string name="spinner_taskgrouop_hint">Select a taskgroup…</string>
    <string name="spinner_users_hint">Select a user…</string>
    <string name="wait">Wait</string>
    <string name="launghing_teleconsultation">Launching teleconsultation</string>
    <string name="retry">Retry</string>
    <string name="camera_toggle">Enable camera</string>
    <string name="ar_low_filter_level">Low filter level (0: disabled)</string>
    <string name="ar_keyboard">Keyboard</string>
    <string name="ecg_toggle">ECG</string>
    <string name="switch_streams">switch</string>

    <string-array name="Markers">
        <item>eco_marker</item>
        <item>keyboard_marker</item>
        <item>patient_marker</item>
    </string-array>

</resources>
