<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/button_call"
        android:enabled="false"
        android:title="@string/action_call"
        app:showAsAction="always"/>

    <item
        android:id="@+id/button_hangup"
        android:title="@string/hangup_call"
        app:showAsAction="always"/>

    <item
        android:id="@+id/button_ar"
        android:title="@string/ar_toggle"
        android:checkable="true"
        android:checked="false"
        android:icon="@android:drawable/checkbox_off_background"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/button_camera"
        android:title="@string/camera_toggle"
        android:checkable="true"
        android:checked="true"
        android:icon="@android:drawable/checkbox_on_background"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/button_ptz"
        android:title="@string/ptz"
        app:showAsAction="always"/>

    <item
        android:id="@+id/change_eco_stream_size"
        android:title="@string/decrease_eco_stream"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/button_exit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/exit"
        app:showAsAction="ifRoom"/>

</menu>