<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings">
    <EditTextPreference
        android:key="config_server_address"
        android:title="@string/config_server_address"
        android:summary="%s"/>
    <EditTextPreference
        android:key="config_server_port"
        android:title="@string/config_server_port"
        android:defaultValue="8000"
        android:inputType="number"
        android:summary="%s"/>
    <ListPreference
        android:key="role_preference"
        android:title="@string/role"
        android:summary="%s"
        android:entries="@array/roles_entries"
        android:entryValues="@array/roles_entries_values"/>
    <CheckBoxPreference
        android:key="ar_enabled"
        android:title="Enable Augmented Reality"
        android:defaultValue="false"
        android:dependency="role_preference"
        android:enabled="false"/>
    <EditTextPreference
        android:key="device_id"
        android:title="@string/device_id"
        android:enabled="false"/>
</PreferenceScreen>