<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_tc_patient"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/default_edge_margin"
            android:paddingLeft="@dimen/default_edge_margin"
            android:paddingRight="@dimen/default_edge_margin"
            android:paddingStart="@dimen/default_edge_margin"
            android:text="@string/patient"
            android:textSize="@dimen/textview_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_tc_description"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/default_edge_margin"
            android:paddingLeft="@dimen/default_edge_margin"
            android:paddingRight="@dimen/default_edge_margin"
            android:paddingStart="@dimen/default_edge_margin"
            android:text="@string/description"
            android:textSize="@dimen/textview_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_tc_applicant"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.3"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/default_edge_margin"
            android:paddingLeft="@dimen/default_edge_margin"
            android:paddingRight="@dimen/default_edge_margin"
            android:paddingStart="@dimen/default_edge_margin"
            android:text="@string/applicant"
            android:textSize="@dimen/textview_text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_tc_urgency"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.2"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/default_edge_margin"
            android:paddingLeft="@dimen/default_edge_margin"
            android:paddingRight="@dimen/default_edge_margin"
            android:paddingStart="@dimen/default_edge_margin"
            android:text="@string/urgency"
            android:textSize="@dimen/textview_text_size"
            android:textStyle="bold"/>

    </LinearLayout>

    <ListView
        android:id="@+id/teleconsultation_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"/>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/empty_teleconsultation_list"/>

</LinearLayout>